# aca

./: .clang-format  .gitignore  CMakeLists.txt  build.sh
simulator/: CMakeLists.txt
simulator/apps/app/: CMakeLists.txt
simulator/apps/app/src/: main.cpp
simulator/cmake/: generic.cmake
simulator/include/TkArch/: Basic.h  Complex.h  Components.h  Compound.h  Core.h  Events.h  Meta.h  Observers.h  Types.h  Util.h
simulator/lib/gtest/: CMakeLists.txt
simulator/src/basic/: Basic.h  CMakeLists.txt
simulator/src/basic/src/: AndGate.cpp  AndGate.h  Clock.cpp  Clock.h  Component.h  Data.h  OrGate.cpp  OrGate.h  Register.cpp  Register.h  State.h  TristateBuffer.cpp  TristateBuffer.h
simulator/src/basic/tests/: CMakeLists.txt
simulator/src/complex/: CMakeLists.txt  Complex.h
simulator/src/complex/src/: ArithmeticLogicUnit.cpp  ArithmeticLogicUnit.h  Complex.cpp  ControlUnit.cpp  ControlUnit.h  Memory.h  MemoryAddressRegister.cpp  MemoryAddressRegister.h  MemoryBufferRegister.cpp  MemoryBufferRegister.h  Processor.cpp  Processor.h  ProgramCounter.cpp  ProgramCounter.h  StatusRegister.cpp  StatusRegister.h
simulator/src/complex/tests/: CMakeLists.txt
simulator/src/components/: CMakeLists.txt  Components.h
simulator/src/components/src/: Components.cpp
simulator/src/components/tests/: CMakeLists.txt
simulator/src/compound/: CMakeLists.txt  Compound.h
simulator/src/compound/src/: Compound.cpp
simulator/src/compound/tests/: CMakeLists.txt
simulator/src/core/: CMakeLists.txt  Core.h
simulator/src/core/src/: Core.cpp
simulator/src/core/tests/: CMakeLists.txt
simulator/src/events/: CMakeLists.txt  Events.h
simulator/src/meta/: CMakeLists.txt  Meta.h
simulator/src/observers/: CMakeLists.txt  Observers.cpp  Observers.h
simulator/src/operators/: _CMakeLists.txt
simulator/src/types/: Types.h
simulator/src/util/: CMakeLists.txt  Util.h
(+154 files in other folders)
